--- a/style.css
+++ b/style.css
@@ -265,7 +265,8 @@ footer {
 .nav-links {
   list-style: none;
   display: flex; 
-  gap: 20px;
+  gap: 10px;
+  margin: 0;
 }
 
 .nav-links li a {
@@ -343,7 +344,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 5%;
+  padding: 10px 10px;
   height: 70px; /* фиксированная высота панели */
 }
  
