--- a/poradu.css
+++ b/poradu.css
@@ -35,7 +35,8 @@ body {
 
 h1 {
     text-align: center;
-    text-shadow: 3px 3px 0 #000;
+    color:#a8a8a8;
+    text-shadow: 3px 3px 0 #000000;
     background-color: #3a3a3a;
     padding: 15px;
     border: 4px solid #5a5a5a;
@@ -68,6 +69,7 @@ h1 {
     animation: slideIn 0.5s ease-out forwards;
     opacity: 0;
     transform: translateX(-100%);
+    margin-left: 30px;
 }
 
 .advice-item:nth-child(1) {
@@ -105,17 +107,22 @@ h1 {
 .advice-item::before {
     content: "⛏️";
     position: absolute;
-    left: -25px;
+    left: -35px;
     top: 50%;
     transform: translateY(-50%);
     font-size: 20px;
+    transition: transform 0.3s ease;
 }
+.advice-item:hover::before {
+    transform: translateY(-50%) scale(1.2) rotate(360deg);
 
+}
 .advice-item:hover {
     transform: scale(1.05);
     background-color: #828282;
     border-color: #6a6a6a;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+
 }
 
 h4 {
