--- a/poradu.css
+++ b/poradu.css
@@ -41,8 +41,8 @@ h1 {
     border: 4px solid #5a5a5a;
     margin-bottom: 30px;
     animation: titleGlow 2s infinite alternate;
+    text-shadow: 3px 3px 6px rgba(216, 189, 189, 0.5);
 }
-
 @keyframes titleGlow {
     0% {
         box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
@@ -137,3 +137,5 @@ h4 {
     font-size: 10px;
     color: #ccc;
 }
+
+
